--- a/cursos.html
+++ b/cursos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Nosotros</title>
+		<title>CURSOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,7 +33,7 @@
 
 				<!-- Main -->
 					<div class="inner">
-					<h1>Nosotros</h1>
+					<h1>Cursos</h1>
 					<p>
 						Somos una comunidad de educadores, desarrolladores y expertos en IA comprometidos con hacer del conocimiento una herramienta accesible para todos. Sabemos que la tecnología no solo cambia industrias, también transforma vidas, y por eso creamos cursos prácticos, interactivos y adaptados a distintos niveles.
 					  </p>
@@ -52,12 +52,10 @@
 						  });
 					  </script>
 			</div>
-
-			<script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 	</body>
 </html>
-
