--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 									<span class="image">
 										<img src="images/pic10.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="cursos.html">
 										<h2>CURSOS</h2>
 										<div class="content">
 											<p>Coversaciones terminadas que fueron guardadas como cursos.</p>
@@ -56,7 +56,7 @@
 									<span class="image">
 										<img src="images/pic11.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="nuevosC.html">
 										<h2>NUEVO CURSO</h2>
 										<div class="content">
 											<p>Inicar una nueva conversacion.</p>
@@ -67,7 +67,7 @@
 									<span class="image">
 										<img src="images/pic12.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="finalizados.html">
 										<h2>CURSOS FINALIZADOS</h2>
 										<div class="content">
 											<p>Historial de todas las conversaciones terminadas.</p>
