--- a/nuevosC.html
+++ b/nuevosC.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Nosotros</title>
+		<title>CURSOS NUEVOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,28 +12,32 @@
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
+
 				<!-- Header -->
-				<div id="header-container"></div>
-				<script>
-				   fetch('Header.html')
-					 .then(res => res.text())
-					 .then(data => {
-					   document.getElementById('header-container').innerHTML = data;
-					 });
-				 </script>
-				<!-- Menu -->		
-				<nav id="menu">	
-					<h2>Menu</h2>
-					<ul>
-						<li><a href="index.html">Inicio</a></li>
-						<li><a href="elements.html">Acerca de</a></li>
-						<li><a href="generic.html">Nosotros</a></li>
-					</ul>
-				</nav>	
+
+								<!-- Header -->
+                                <div id="header-container"></div>
+                                <script>
+                                   fetch('Header.html')
+                                     .then(res => res.text())
+                                     .then(data => {
+                                       document.getElementById('header-container').innerHTML = data;
+                                     });
+                                 </script>
+                                <!-- Menu -->		
+                                <nav id="menu">	
+                                    <h2>Menu</h2>
+                                    <ul>
+                                        <li><a href="index.html">Inicio</a></li>
+                                        <li><a href="elements.html">Acerca de</a></li>
+                                        <li><a href="generic.html">Nosotros</a></li>
+                                    </ul>
+                                </nav>	
+                
 
 				<!-- Main -->
 					<div class="inner">
-					<h1>Nosotros</h1>
+					<h2>INICIA UNA NUEVA CONVERSACION</h2>
 					<p>
 						Somos una comunidad de educadores, desarrolladores y expertos en IA comprometidos con hacer del conocimiento una herramienta accesible para todos. Sabemos que la tecnología no solo cambia industrias, también transforma vidas, y por eso creamos cursos prácticos, interactivos y adaptados a distintos niveles.
 					  </p>
@@ -52,12 +56,10 @@
 						  });
 					  </script>
 			</div>
-
-			<script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 	</body>
 </html>
-
