--- a/finalizados.html
+++ b/finalizados.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Nosotros</title>
+		<title>CURSOS FINALIZADOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,7 +12,11 @@
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
+
 				<!-- Header -->
+
+				
+                				<!-- Header -->
 				<div id="header-container"></div>
 				<script>
 				   fetch('Header.html')
@@ -33,7 +37,7 @@
 
 				<!-- Main -->
 					<div class="inner">
-					<h1>Nosotros</h1>
+					<h2>CONVERSACIONES GUARDADAS</h2>
 					<p>
 						Somos una comunidad de educadores, desarrolladores y expertos en IA comprometidos con hacer del conocimiento una herramienta accesible para todos. Sabemos que la tecnología no solo cambia industrias, también transforma vidas, y por eso creamos cursos prácticos, interactivos y adaptados a distintos niveles.
 					  </p>
@@ -52,12 +56,10 @@
 						  });
 					  </script>
 			</div>
-
-			<script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 	</body>
 </html>
-
