--- a/finalizados.html
+++ b/finalizados.html
@@ -30,8 +30,8 @@
 					<h2>Menu</h2>
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
-						<li><a href="elements.html">Acerca de</a></li>
-						<li><a href="generic.html">Nosotros</a></li>
+						<li><a href="cursos.html">Cursos</a></li>
+						<li><a href="nuevosC.html">Nuevo Curso</a></li>
 					</ul>
 				</nav>	
 
