--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h2>Bienvenido a EstuIA<strong></strong><br /></h2>
+								<h2>Bienvenido a Estud.IA<strong></strong><br /></h2>
 								<p>Aprende con ayuda de inteligencia artificial de manera interactiva y práctica, utilizando los recursos más avanzados.</p>
 								<p>EstuIA es una plataforma que permite a los estudiantes aprender con ayuda de inteligencia artificial de manera interactiva y práctica, utilizando los recursos más avanzados.</p>
 							</header>
