--- a/nuevosC.html
+++ b/nuevosC.html
@@ -29,8 +29,8 @@
                                     <h2>Menu</h2>
                                     <ul>
                                         <li><a href="index.html">Inicio</a></li>
-                                        <li><a href="elements.html">Acerca de</a></li>
-                                        <li><a href="generic.html">Nosotros</a></li>
+                                        <li><a href="cursos.html">Cursos</a></li>
+                                        <li><a href="finalizados.html">Cursos finalizados</a></li>
                                     </ul>
                                 </nav>	
                 
