--- a/cursos.html
+++ b/cursos.html
@@ -26,8 +26,8 @@
 					<h2>Menu</h2>
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
-						<li><a href="elements.html">Acerca de</a></li>
-						<li><a href="generic.html">Nosotros</a></li>
+						<li><a href="nuevosC.html">Curso Nuevo</a></li>
+						<li><a href="finalizados.html">Cursos Finalizados</a></li>
 					</ul>
 				</nav>	
 
@@ -42,6 +42,9 @@
 					</p>
 					</div>
 				 </div>
+				 
+
+				  
 
 					<div id="footer-container"></div>
 					  <script>
